# NgoOpsBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  STAFF_GUIDE.md  alembic.ini  docker-compose.yml  ngo-opsbot-decisions-final.md  pyproject.toml  railway.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-dashboard.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_support_tickets.py
app/: main.py
app/agents/: __init__.py  base.py  comms.py  compliance.py  dispatcher.py  finance.py  fundraising.py  general.py  helper.py  hr.py  marketing.py
app/agents/prompts/: loader.py  platform_base.py
app/agents/tools/: __init__.py  calculator.py  definitions.py  executor.py  web_search.py
app/api/v1/: google_oauth.py  health.py  webhook.py
app/api/v1/admin/: conversations.py  ngos.py  reminders.py  staff.py  support.py
app/api/v1/staff/: __init__.py  auth.py  chat.py  me.py  reminders.py  support.py  threads.py
app/bot/: agent_detector.py  conversation_store.py  ngo_bot_registry.py  ngo_router.py  update_parser.py
app/bot/handlers/: callback_handler.py  command_handler.py  message_handler.py  voice_handler.py
app/comms/: dispatcher.py  email.py  sms.py  telegram_sender.py
app/core/: cache.py  config.py  database.py  logging.py  metrics.py  middleware.py  rate_limiter.py  redis_client.py  security.py  security_utils.py  staff_auth.py
app/integrations/: whisper.py
app/integrations/google/: auth.py  calendar_integration.py  credentials_manager.py  drive.py  gmail.py  sheets.py
app/models/: __init__.py  audit.py  audit_log.py  base.py  conversation.py  ngo.py  reminder.py  staff.py  support.py  task.py
app/scheduler/: engine.py  reminder_types.py
app/scheduler/jobs/: poll_reminders.py  send_reminder.py
app/schemas/: __init__.py  conversation.py  ngo.py  reminder.py  staff.py  support.py
dashboard/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/auth/login/: route.ts
dashboard/src/app/api/auth/logout/: route.ts
dashboard/src/app/api/proxy/[...path]/: route.ts
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/dashboard/audit/: page.tsx
dashboard/src/app/dashboard/conversations/: page.tsx
dashboard/src/app/dashboard/ngos/: page.tsx
dashboard/src/app/dashboard/reminders/: page.tsx
dashboard/src/app/dashboard/staff/: page.tsx
dashboard/src/app/dashboard/support/: page.tsx
dashboard/src/app/dashboard/system/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: providers.tsx
dashboard/src/components/layout/: sidebar.tsx  topbar.tsx
dashboard/src/components/ngos/: agent-settings.tsx  ngo-form.tsx  ngo-wizard.tsx  staff-form.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  select.tsx  sheet.tsx  table.tsx  toast.tsx  toaster.tsx  use-toast.ts
dashboard/src/lib/: utils.ts
docs/: admin-dashboard-plan.md  cost-model-and-pricing.md  scaling-to-50-ngos.md
scripts/: check_env.py  create_ngo.py  db_init.sql  dev.sh  seed_db.py  setup.sh  setup_dev.sh  smoke_test.sh
staff-portal/: middleware.ts  package-lock.json  package.json
staff-portal/app/: globals.css  layout.tsx
staff-portal/app/api/auth/[...nextauth]/: route.ts
staff-portal/app/chat/: page.tsx
staff-portal/app/components/layout/: AppShell.tsx
staff-portal/app/components/ui/: button.tsx
staff-portal/app/documents/: page.tsx
staff-portal/app/lib/: api.ts  types.ts  utils.ts
staff-portal/app/login/: page.tsx
staff-portal/app/reminders/: page.tsx
staff-portal/app/settings/: page.tsx
staff-portal/app/support/: page.tsx
tests/: conftest.py
tests/integration/: conftest.py  test_admin_ngos.py  test_admin_staff.py  test_health.py  test_staff_auth.py  test_staff_chat.py  test_staff_me.py  test_staff_reminders.py  test_staff_support.py  test_staff_threads.py  test_webhook.py
tests/unit/: test_agent_detector.py  test_comms_email.py  test_comms_sms.py  test_security.py  test_update_parser.py
(+2 files in other folders)
