[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngo-opsbot"
version = "0.1.0"
description = "Multi-tenant SaaS Telegram bot platform for NGOs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "NGO OpsBot Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "httpx>=0.27.0,<1.0.0",

    # Telegram
    "python-telegram-bot[job-queue]>=20.8,<22.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.1,<2.0.0",

    # Cache
    "redis[hiredis]>=5.0.4,<6.0.0",

    # Task scheduling
    "apscheduler>=3.10.4,<4.0.0",

    # AI / ML
    "anthropic>=0.28.0,<2.0.0",
    "openai>=1.30.0,<2.0.0",          # Whisper API

    # Google APIs
    "google-api-python-client>=2.131.0,<3.0.0",
    "google-auth-oauthlib>=1.2.0,<2.0.0",
    "google-auth-httplib2>=0.2.0,<1.0.0",

    # Communications
    "sendgrid>=6.11.0,<7.0.0",

    # Config & validation
    "pydantic[email]>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",

    # Cryptography — pin tightly; major versions can break Fernet key format
    # or drop cipher support.  Review release notes before upgrading.
    "cryptography>=42.0.7,<44.0.0",

    # Image processing
    "pillow>=10.3.0,<12.0.0",

    # Observability
    "structlog>=24.2.0,<26.0.0",
    "sentry-sdk[fastapi]>=2.5.0,<3.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",

    # Timezone support
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",           # async test client
    "factory-boy>=3.3.0",
    "faker>=25.3.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "types-redis>=4.6.0",
]

[project.scripts]
create-ngo = "scripts.create_ngo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (partial)
    "S",   # flake8-bandit security
    "T20", # flake8-print
]
ignore = [
    "ANN101", # missing type for self
    "ANN102", # missing type for cls
    "S101",   # use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN", "T20"]
"scripts/**/*.py" = ["T20"]
"alembic/**/*.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
